--- a/src/app/container/todo-list-container/todo-list-container.component.html
+++ b/src/app/container/todo-list-container/todo-list-container.component.html
@@ -1,5 +1,5 @@
 <app-todo-list
-  [todoItems]="todoItems"
+  [todoItems]="todoItems | async"
   (outToggleDone)="toggleDone($event)"
   (outShowDetails)="showDetails($event)">
 </app-todo-list>
